--- a/style/style.css
+++ b/style/style.css
@@ -1,92 +1,41 @@
-.odet {
-  text-align: center;
+.keterangan{
+  font-size: 18px;
+  text-align: justify;
+  margin-right: 5%;
+  margin-left: 5%;
 }
-.deskripsi {
-    font-size: 18px;
-}
-.card {
-  background: white;
-  width : 300px;
-  height: 420px;
-  padding-top: 20px;
-  margin:100px;
-  text-align: center;
-  font-size: 20px;
-  text-decoration: white;
-  border-style: solid;
-  border-radius: 15px;
-  border-color:white;
-}
-.detail:hover {
-  color: white;
-}
-.card a {
-  background-color: white;
-  color: black;
+.centerimg {
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  height: 300px;
+}
+.col-md-3 {
   text-align: center;
-  margin: 35px 25px;
-  text-decoration: none;
-  border-style: solid;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  height: 400px;
+  border: 1px;
+  border-radius: 10px;
+  background-color: #fff;
 }
-
-.judul {
-  text-align: center;
-}
-.form {
-  margin-left: 30px;
-  font-size: 20px;
-  margin-right: 30px;
-}
-.video {
-  width: 500px;
-  height: 500px;
-  margin-left: 30%;
-}
-.biodata {
-  margin-left: 10px;
-  font-size: 20px;
-  text-align: left;
-  justify-content: left;
-}
-.judulbio {
-  font-weight: bold;
-}
-.bio{
-  text-align: center;
-  justify-content: center;
-}
-label {
-  font-size: 20px;
-  text-align: left;
-  padding-left: 30px;
-}
-h3{
-  text-align: center;
-  font-weight: bold;
-}
-h4{
-  font-weight: bold;
-  font-size: 20px;
-  text-align: center;
+.row{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
 .gambar-menu{
-  width: 100px;
-  height: 100px;
-  align-items: center;
+  height: 125px;
+  width: 125px;
 }
-.list-beranda{
-  padding:10px 20px 10px 50px;
-}
-.btn{
-  width: 50%;
-  height: 40px;
-  font-size: 15px;
-}
-.keterangan-menu{
-  font-size: 15px;
+.judul {
+  font-size: 22px;
   text-align: center;
-  padding-left: 0px;
+  font-weight: bold;
 }
 .harga{
   font-weight: bold;
@@ -99,6 +48,17 @@ h4{
   text-decoration: line-through;
   text-align: center;
   padding-left: 0px;
+}
+.btn{
+  width: 50%;
+  height: 50px;
+  font-size: 15px;
+}
+.checked {
+  color: yellow;
+}
+.half-empty{
+  color: yellow;
 }
 footer{
   background: #ccc;
